// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Notification Banner Notification 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": "1rem",
        "width": 1024,
      }
    }
  >
    <div
      className="css-tlhr7b-NotificationsContainer"
    >
      <div
        className="css-6t1vuy-CompactNotification"
      >
        <div
          className="css-1qxbj8g-CompactNotification"
        >
          <div
            className="css-61cpcu-CompactNotification"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-1atsk5c-Icon"
              />
            </span>
          </div>
          <div
            className="css-a0qw3x-CompactNotification"
          >
            This is the heading:
          </div>
          <div>
            This is the info
          </div>
        </div>
        <div
          className="css-1xih1b5-CompactNotification"
        >
          <span
            className="css-172bta1-CompactNotification"
            data-testid="notification-primary"
            onClick={[Function]}
          >
            Action
          </span>
          <span
            className="css-xvugv-CompactNotification"
            data-testid="notification-close"
            onClick={[Function]}
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-18cmtjl-Icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        className="css-6t1vuy-CompactNotification"
      >
        <div
          className="css-1qxbj8g-CompactNotification"
        >
          <div
            className="css-61cpcu-CompactNotification"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-1atsk5c-Icon"
              />
            </span>
          </div>
          <div
            className="css-a0qw3x-CompactNotification"
          >
            This is the heading:
          </div>
          <div>
            This is the info
          </div>
        </div>
        <div
          className="css-1xih1b5-CompactNotification"
        >
          <span
            className="css-172bta1-CompactNotification"
            data-testid="notification-primary"
            onClick={[Function]}
          >
            Action
          </span>
          <span
            className="css-xvugv-CompactNotification"
            data-testid="notification-close"
            onClick={[Function]}
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-18cmtjl-Icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        className="css-6t1vuy-CompactNotification"
      >
        <div
          className="css-1qxbj8g-CompactNotification"
        >
          <div
            className="css-61cpcu-CompactNotification"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-1atsk5c-Icon"
              />
            </span>
          </div>
          <div
            className="css-a0qw3x-CompactNotification"
          >
            This is the heading:
          </div>
          <div>
            This is the info
          </div>
        </div>
        <div
          className="css-1xih1b5-CompactNotification"
        >
          <span
            className="css-172bta1-CompactNotification"
            data-testid="notification-primary"
            onClick={[Function]}
          >
            Action
          </span>
          <span
            className="css-xvugv-CompactNotification"
            data-testid="notification-close"
            onClick={[Function]}
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-18cmtjl-Icon"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <p
      style={
        Object {
          "paddingTop": "8px",
        }
      }
    >
      
    </p>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Inline Notification 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "padding": "1rem",
            "width": 768,
          }
        }
      >
        <div
          className="css-6t1vuy-CompactNotification"
        >
          <div
            className="css-1qxbj8g-CompactNotification"
          >
            <div
              className="css-61cpcu-CompactNotification"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1atsk5c-Icon"
                />
              </span>
            </div>
            <div>
              Informative Message
            </div>
          </div>
          <div
            className="css-1xih1b5-CompactNotification"
          />
        </div>
        <p
          style={
            Object {
              "paddingTop": "8px",
            }
          }
        >
          
        </p>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "padding": "1rem",
            "width": 768,
          }
        }
      >
        <div
          className="css-6t1vuy-CompactNotification"
        >
          <div
            className="css-1qxbj8g-CompactNotification"
          >
            <div
              className="css-61cpcu-CompactNotification"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1atsk5c-Icon"
                />
              </span>
            </div>
            <div>
              Informative Message
            </div>
          </div>
          <div
            className="css-1xih1b5-CompactNotification"
          >
            <span
              className="css-172bta1-CompactNotification"
              data-testid="notification-primary"
              onClick={[Function]}
            >
              Action
            </span>
            <span
              className="css-xvugv-CompactNotification"
              data-testid="notification-close"
              onClick={[Function]}
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-18cmtjl-Icon"
                />
              </span>
            </span>
          </div>
        </div>
        <p
          style={
            Object {
              "paddingTop": "8px",
            }
          }
        >
          
        </p>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "padding": "1rem",
            "width": 768,
          }
        }
      >
        <div
          className="css-6t1vuy-CompactNotification"
        >
          <div
            className="css-1qxbj8g-CompactNotification"
          >
            <div
              className="css-61cpcu-CompactNotification"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1atsk5c-Icon"
                />
              </span>
            </div>
            <div>
              Informative Message
            </div>
          </div>
          <div
            className="css-1xih1b5-CompactNotification"
          >
            <span
              className="css-172bta1-CompactNotification"
              data-testid="notification-primary"
              onClick={[Function]}
            >
              Action
            </span>
          </div>
        </div>
        <p
          style={
            Object {
              "paddingTop": "8px",
            }
          }
        >
          
        </p>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "center",
            "padding": "1rem",
            "width": 768,
          }
        }
      >
        <div
          className="css-6t1vuy-CompactNotification"
        >
          <div
            className="css-1qxbj8g-CompactNotification"
          >
            <div
              className="css-61cpcu-CompactNotification"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-1atsk5c-Icon"
                />
              </span>
            </div>
            <div>
              Informative Message
            </div>
          </div>
          <div
            className="css-1xih1b5-CompactNotification"
          >
            <span
              className="css-xvugv-CompactNotification"
              data-testid="notification-close"
              onClick={[Function]}
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-18cmtjl-Icon"
                />
              </span>
            </span>
          </div>
        </div>
        <p
          style={
            Object {
              "paddingTop": "8px",
            }
          }
        >
          
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Playground Notification 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": "1rem",
        "width": 768,
      }
    }
  >
    <div
      className="css-6t1vuy-CompactNotification"
    >
      <div
        className="css-1qxbj8g-CompactNotification"
      >
        <div
          className="css-61cpcu-CompactNotification"
        >
          <span
            className="css-1gnbc76-Icon"
          >
            <span
              className="css-1atsk5c-Icon"
            />
          </span>
        </div>
        <div>
          This is the info
        </div>
      </div>
      <div
        className="css-1xih1b5-CompactNotification"
      >
        <span
          className="css-172bta1-CompactNotification"
          data-testid="notification-primary"
          onClick={[Function]}
        >
          Action
        </span>
        <span
          className="css-xvugv-CompactNotification"
          data-testid="notification-close"
          onClick={[Function]}
        >
          <span
            className="css-1gnbc76-Icon"
          >
            <span
              className="css-18cmtjl-Icon"
            />
          </span>
        </span>
      </div>
    </div>
    <p
      style={
        Object {
          "paddingTop": "8px",
        }
      }
    >
      
    </p>
  </div>
</div>
`;

exports[`Storyshots Design System/Notification Toast Notifiction 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": "1rem",
        "width": 768,
      }
    }
  >
    <div
      className="css-4uleuc-Toast"
    >
      <div
        className="css-1f9jx92-Toast"
      >
        <div
          className="css-1k5ilhh-Toast"
        >
          <div
            className="css-1pas082-Toast"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-1tbeg9y-Icon"
              />
            </span>
          </div>
          <div>
            Informative Message
          </div>
        </div>
        <div
          className="css-gx89q3-Toast"
        >
          <span
            className="css-b2ukb2-Toast"
            onClick={[Function]}
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-1tbeg9y-Icon"
              />
            </span>
          </span>
          <span
            className="css-1ejuyfz-Toast"
            onClick={[Function]}
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-1tbeg9y-Icon"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        className="css-osq7az-Toast"
      >
        <div
          className="css-yc4ml2-NotificationVisual"
        >
          Informative Message
        </div>
        <div
          className="css-tgw523-NotificationVisual"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra neque nec est porttitor
        </div>
        <div
          className="css-8gkyu8-NotificationVisual"
        >
          <div
            className="css-16owih8-NotificationVisual"
          >
            <button
              className="css-1domea0-Button"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="css-9nhvja-Button"
              >
                Secondary CTA
              </span>
            </button>
          </div>
          <div
            className="css-16owih8-NotificationVisual"
            onClick={[Function]}
          >
            <button
              className="css-1sfte8f-Button"
              data-testid="button"
              disabled={false}
            >
              <span
                className="css-9nhvja-Button"
              >
                Primary CTA
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <p
      style={
        Object {
          "paddingTop": "8px",
        }
      }
    >
      
    </p>
  </div>
</div>
`;
